--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,5 +1,5 @@
 #MySql Config
 db.driverClass=com.mysql.jdbc.Driver
 db.jdbcUrl=jdbc:mysql://localhost:3306/crawler
-db.user=root
-db.password=root
+db.userName=root
+db.pwd=root
